# whosfaster

./: README.md  README.rst  setup.cfg
whosfaster/: __init__.py  ameasure.py  config.py  measure.py
