[metadata]
name = whosfaster
version = 0.0.1
author = achooan
author_email = 88soldieron@gmail.com
description = A simple performance tool for measuring functions or methods and comparing between them.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = file: LICENSE.txt
keywords = performance measure tool async sync
project_urls =
    Source = https://github.com/achooan/whosfaster
    Bug Reports = https://github.com/achooan/whosfaster/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers


[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =


[options.extras_require]
dev = 
    flake8==3.7.5
    autopep8==1.4.3
test = 
    pytest==4.1.1

[options.packages.find]
exclude =
    contrib
    docs
    tests

